# markov-graphs-project

./: CMakeLists.txt  README.md  adjacency-list.c  adjacency-list.h  cell.c  cell.h  class.c  class.h  graph.c  graph.h  hasse.c  hasse.h  list.c  list.h  main.c  matrix.c  matrix.h  mermaidchart-file-generator.c  mermaidchart-file-generator.h  partition.c  partition.h  tarjan.c  tarjan.h  tarjan_vertex.c  tarjan_vertex.h  tests.c  tests.h  utils.c  utils.h
data/: matrice_m.txt  matrice_n.txt
results/: graph_m.mmd  graph_n.mmd  hasse_m.mmd  hasse_n.mmd
